# libjokertv

./: .ctags  .vimrc  CMakeLists.txt  README.md
3party/libdvbapi/: dvbca.h
3party/libdvben50221/: CMakeLists.txt  en50221_stdcam_llci.c  en50221_transport.c  en50221_transport.h
3party/libucsi/: crc32.c  crc32.d  endianops.h  section_buf.c  section_buf.d  transport_packet.c  transport_packet.d
3party/libucsi/atsc/: atsc_text.c  atsc_text.d  content_advisory_descriptor.h  cvct_section.c  cvct_section.d  cvct_section.h  dcc_departing_request_descriptor.h  dccsct_section.c  dccsct_section.d  dcct_section.c  dcct_section.d  eit_section.c  eit_section.d  ett_section.c  ett_section.d  extended_channel_name_descriptor.h  mgt_section.c  mgt_section.d  rrt_section.c  rrt_section.d  service_location_descriptor.h  stt_section.c  stt_section.d  time_shifted_service_descriptor.h  tvct_section.c  tvct_section.d  tvct_section.h  types.c  types.d
3party/libucsi/dvb/: bat_section.c  bat_section.d  dit_section.c  dit_section.d  eit_section.c  eit_section.d  int_section.c  int_section.d  mosaic_descriptor.h  nit_section.c  nit_section.d  partial_transport_stream_descriptor.h  rst_section.c  rst_section.d  sdt_section.c  sdt_section.d  sit_section.c  sit_section.d  st_section.c  st_section.d  tdt_section.c  tdt_section.d  tot_section.c  tot_section.d  tot_section.h  tva_container_section.c  tva_container_section.d  types.c  types.d
3party/libucsi/mpeg/: cat_section.c  cat_section.d  metadata_descriptor.h  metadata_pointer_descriptor.h  metadata_section.c  metadata_section.d  odsmt_section.c  odsmt_section.d  odsmt_section.h  pat_section.c  pat_section.d  pmt_section.c  pmt_section.d  tsdt_section.c  tsdt_section.d
cmake/: jokertvConfig.cmake
docs/: atsc_north_america_freq.xml  china_dtmb.xml  convert.py  cuba_dtmb.xml  dvb_t2_oirt_freq.xml  dvb_t_oirt_freq.xml  satellites.xml
examples/downstream-cmake/: CMakeLists.txt  main.c
fw/fw-0.37/: joker_tv-0.37.sof
hwtest/: dmm.py  joker-tv.cdf  openhtf-jokertv-frontend.py
include/: joker_blind_scan.h  joker_ci.h  joker_en50221.h  joker_fpga.h  joker_i2c.h  joker_list.h  joker_spi.h  joker_ts.h  joker_ts_filter.h  joker_tv.h  joker_utils.h  joker_xml.h  oc_i2c.h  u-drv.h  u_drv_data.h  u_drv_tune.h
include/win/: poll.h  wtime.h
include/win/sys/: poll.h  uio.h
linux/drivers/media/dvb-core/: dvb_frontend.h
linux/drivers/media/dvb-frontends/: atbm888x.c  atbm888x.h  atbm888x_priv.h  cxd2841er.c  cxd2841er.h  cxd2841er_blind_scan.c  cxd2841er_blind_scan.h  cxd2841er_priv.h  helene.c  lgdt3306a.c  tps65233.c  tps65233.h
linux/include/linux/: i2c.h  types.h
linux/include/uapi/linux/dvb/: frontend.h
src/: i2c-scan.c  joker-tv.cc  joker_blind_scan.c  joker_ci.c  joker_en50221.c  joker_en50221_server.c  joker_fpga.c  joker_i2c.c  joker_spi.c  joker_ts.c  joker_ts_filter.c  joker_utils.c  joker_xml.c  oc_i2c.c  tscheck.c  tsgen.c  u-drv-main.c  u-drv.c  u_drv_data.c  u_drv_tune.c
tools/: linux-permission-fix.sh  plot-spectrum.sh
